--- a/nvidia-dev.yaml
+++ b/nvidia-dev.yaml
@@ -319,6 +319,9 @@ setup_commands:
     - cp -r /mnt/nccl-tests /home/testuser && chown -R testuser /home/testuser/nccl-tests 
     - su - testuser -c "cd && source .bashrc && cd nccl-tests && make MPI=1 MPI_HOME=/home/testuser/miniconda3/pkgs/mpich-3.2.1-h1c2f66e_1007/"
     - mkdir ~/.ssh && cp /mnt/id_rsa* ~/.ssh
+    - chmod 400 ~/.ssh/id_rsa
+    - git config --global user.name "Daiyaan Arfeen"
+    - git config --global user.email daiyaanarfeen@cmu.edu
       #    - ssh-copy-id
 
 # Custom commands that will be run on the head node after common setup.
