--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "yolov3"]
 	path = yolov3
 	url = https://github.com/ultralytics/yolov3.git
+[submodule "deepspeech.pytorch"]
+	path = deepspeech
+	url = https://github.com/SeanNaren/deepspeech.pytorch.git
