--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "yolov3"]
 	path = yolov3
 	url = https://github.com/ultralytics/yolov3.git
+[submodule "NCF"]
+	path = NCF
+	url = https://github.com/guoyang9/NCF.git
