--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "NCF"]
 	path = NCF
 	url = https://github.com/guoyang9/NCF.git
+[submodule "deepspeech.pytorch"]
+	path = deepspeech.pytorch
+	url = https://github.com/SeanNaren/deepspeech.pytorch.git
