--- a/torch.yaml
+++ b/torch.yaml
@@ -3,16 +3,16 @@ cluster_name: daiyaan_rtx
 
 # The minimum number of workers nodes to launch in addition to the head
 # node. This number should be >= 0.
-min_workers: 0
+min_workers: 1
 
 # The maximum number of workers nodes to launch in addition to the head
 # node. This takes precedence over min_workers.
-max_workers: 0
+max_workers: 1
 
 # The initial number of worker nodes to launch in addition to the head
 # node. When the cluster is first brought up (or when it is refreshed with a
 # subsequent `ray up`) this number of nodes will be started.
-initial_workers: 0
+initial_workers: 1
 
 # Whether or not to autoscale aggressively. If this is enabled, if at any point
 #   we would start more workers, we start at least enough to bring us to
@@ -294,7 +294,7 @@ initialization_commands: []
 
 # List of shell commands to run to set up nodes.
 setup_commands:
-    - apt-get update && apt-get install numactl vim git wget binutils zlib1g-dev rsync curl apt-transport-https ca-certificates build-essential -y
+    - apt-get update && apt-get install numactl vim git wget binutils zlib1g-dev rsync curl apt-transport-https ca-certificates build-essential libsndfile1 -y
     - curl -fsSLo /usr/share/keyrings/kubernetes-archive-keyring.gpg https://packages.cloud.google.com/apt/doc/apt-key.gpg
     - echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main" | tee /etc/apt/sources.list.d/kubernetes.list
     - apt-get update && apt-get install -y kubectl
@@ -311,7 +311,7 @@ setup_commands:
     - su - testuser -c "ssh-keygen -q -t rsa -N '' -f /home/testuser/.ssh/id_rsa <<<y >/dev/null 2>&1"
     - su - testuser -c "bash ~/Miniconda3-4.7.10-Linux-x86_64.sh -b"
     - echo 'eval "$(/home/testuser/miniconda3/bin/conda shell.bash hook)"' >> /home/testuser/.bashrc && source /home/testuser/.bashrc
-    - su - testuser -c "source ~/.bashrc && conda install -c conda-forge/label/gcc7 mpich -y"
+    - su - testuser -c "source ~/.bashrc && conda install -c conda-forge/label/gcc7 mpich -y && pip install --upgrade pip"
     - su - testuser -c "source ~/.bashrc && conda install pytorch torchvision torchaudio cudatoolkit=11.1 -c pytorch -c nvidia -y && pip install torch-tb-profiler"
     - echo "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/home/testuser/miniconda3/pkgs/libgfortran-ng-7.3.0-hdf63c60_0/lib/:/home/testuser/miniconda3/pkgs/mpich-3.2.1-h1c2f66e_1007/lib/" >> /home/testuser/.bashrc
     - awk '{sub(/#Port 22/,"Port 8181")}1' /etc/ssh/sshd_config > ssh_config_new && mv ssh_config_new /etc/ssh/sshd_config && service ssh restart
